k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: moshootare/restauranty-auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        livenessProbe: null
        readinessProbe: null
