k8s/discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
  labels:
    app: discounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
      - name: discounts
        image: moshootare/restauranty-discounts:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
        livenessProbe: null
        readinessProbe: null
