k8s/items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
  labels:
    app: items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
      - name: items
        image: moshootare/restauranty-items:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
        livenessProbe: null
        readinessProbe: null
